.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__CompetencyBundle__c/fields/Is_Role_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Role_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, bundle only contains Items which are Roles. If false, bundle only contains items which are Skills.</inlineHelpText>
    <label>Is Role Bundle?</label>
    <type>Checkbox</type>
</CustomField>