.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__CompetencyBundle__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, the Bundle is a Template which can be used on more than one Shift.</inlineHelpText>
    <label>Is Template?</label>
    <type>Checkbox</type>
</CustomField>