.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__CompetencyBundle__c/fields/Template_Status__c.field-meta.xml
<CustomField>
    <fullName>Template_Status__c</fullName>
    <description>Draft: Can be configured, but cannot be used on a Shift | Active: Cannot be configured, but can be used on a Shift | Deprecated: Cannot be configured, and cannot be newly assigned to Shifts.</description>
    <label>Template Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>