.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__CompetencyBundle__c/validationRules/templates_require_a_status.validationRule-meta.xml
<ValidationRule>
    <fullName>templates_require_a_status</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Template__c &amp;&amp; ISBLANK(TEXT(Template_Status__c))</errorConditionFormula>
    <errorMessage>Template Bundles require a Status.</errorMessage>
</ValidationRule>